Fix QA findings for dark mode (#14270)
* Fix QA findings for dark mode

* Revert constant condition made for local testing

* Review feedback fixes

--- a/src/amo/components/AddonFeedbackForm/styles.scss
+++ b/src/amo/components/AddonFeedbackForm/styles.scss
@@ -41,7 +41,7 @@ $icon-size: 32px;
   }
 
   .AddonFeedbackForm-header-metadata {
-    color: $grey-50;
+    color: var(--sub-text-color);
     grid-column: 2 / span 2;
     grid-row: 2;
 
