--- a/src/amo/components/Button/styles.scss
+++ b/src/amo/components/Button/styles.scss
@@ -1,4 +1,3 @@
-@use 'sass:color';
 @use '~amo/css/styles' as *;
 
 $micro-font-size: $font-size-xs;
@@ -126,9 +125,9 @@ $micro-font-size: $font-size-xs;
 
 .Button--neutral {
   @include button(
-    $background: color.adjust($grey-90, $alpha: -0.9),
-    $background-active: color.adjust($grey-90, $alpha: -0.7),
-    $background-hover: color.adjust($grey-90, $alpha: -0.8),
+    $background: var(--neutral-button-bg),
+    $background-active: var(--neutral-button-bg-active),
+    $background-hover: var(--neutral-button-bg-hover),
     $color: var(--text-color-default)
   );
 }
@@ -179,6 +178,6 @@ $micro-font-size: $font-size-xs;
     $background: transparent,
     $background-active: transparent,
     $background-hover: transparent,
-    $color: $black
+    $color: var(--text-color-default)
   );
 }
