--- a/src/amo/components/Paginate/styles.scss
+++ b/src/amo/components/Paginate/styles.scss
@@ -4,7 +4,7 @@
   padding: $padding-page;
 
   @include respond-to(large) {
-    background-color: $grey-10;
+    background-color: var(--background-grey);
     border-radius: $border-radius-default;
     display: inline-block;
     margin: 0 auto;
@@ -20,7 +20,7 @@
   &,
   &:link,
   &:visited {
-    background-color: $grey-20;
+    background-color: var(--background-grey);
     color: var(--link-color);
     display: none;
     font-weight: normal;
@@ -29,7 +29,7 @@
 
     &:first-child,
     &:last-child {
-      color: $black;
+      color: var(--text-color-default);
       display: flex;
     }
 
@@ -42,12 +42,12 @@
 
   &:hover,
   &:active {
-    background-color: $grey-30;
+    background-color: var(--light-hover-color);
   }
 }
 
 .Paginate .Button.Paginate-item--current-page {
-  color: $black;
+  color: var(--text-color-default);
   opacity: 1;
 }
 
@@ -62,7 +62,7 @@
 .Paginate-page-number {
   @include font-light;
 
-  color: $grey-50;
+  color: var(--sub-text-color);
   margin: $padding-page 0 0;
   text-align: center;
 }
