--- a/src/amo/components/ThemePicker/styles.scss
+++ b/src/amo/components/ThemePicker/styles.scss
@@ -1,5 +1,5 @@
 .ThemePicker-header {
-  margin: 0 0 5px;
+  margin: 10px 0 5px;
 }
 
 .ThemePicker-selector {
